@@ -1,0 +1,511 @@
+/*
+ *
+ * This file is generated automatically by the device-manager.pl program.
+ *
+ * Copyright (C) 2012, Molnar Karoly <molnarkaroly@users.sf.net>
+ *
+ */
+
+#ifndef __PIC16REGS_H__
+#define __PIC16REGS_H__
+
+#if defined(__SDCC_PIC10F320)
+  #include <pic10f320.h>
+
+#elif defined(__SDCC_PIC10F322)
+  #include <pic10f322.h>
+
+#elif defined(__SDCC_PIC12F609)
+  #include <pic12f609.h>
+
+#elif defined(__SDCC_PIC12F615)
+  #include <pic12f615.h>
+
+#elif defined(__SDCC_PIC12F617)
+  #include <pic12f617.h>
+
+#elif defined(__SDCC_PIC12F629)
+  #include <pic12f629.h>
+
+#elif defined(__SDCC_PIC12F635)
+  #include <pic12f635.h>
+
+#elif defined(__SDCC_PIC12F675)
+  #include <pic12f675.h>
+
+#elif defined(__SDCC_PIC12F683)
+  #include <pic12f683.h>
+
+#elif defined(__SDCC_PIC12F752)
+  #include <pic12f752.h>
+
+#elif defined(__SDCC_PIC16C62)
+  #include <pic16c62.h>
+
+#elif defined(__SDCC_PIC16C63A)
+  #include <pic16c63a.h>
+
+#elif defined(__SDCC_PIC16C65B)
+  #include <pic16c65b.h>
+
+#elif defined(__SDCC_PIC16C71)
+  #include <pic16c71.h>
+
+#elif defined(__SDCC_PIC16C72)
+  #include <pic16c72.h>
+
+#elif defined(__SDCC_PIC16C73B)
+  #include <pic16c73b.h>
+
+#elif defined(__SDCC_PIC16C74B)
+  #include <pic16c74b.h>
+
+#elif defined(__SDCC_PIC16C432)
+  #include <pic16c432.h>
+
+#elif defined(__SDCC_PIC16C433)
+  #include <pic16c433.h>
+
+#elif defined(__SDCC_PIC16C554)
+  #include <pic16c554.h>
+
+#elif defined(__SDCC_PIC16C557)
+  #include <pic16c557.h>
+
+#elif defined(__SDCC_PIC16C558)
+  #include <pic16c558.h>
+
+#elif defined(__SDCC_PIC16C620)
+  #include <pic16c620.h>
+
+#elif defined(__SDCC_PIC16C620A)
+  #include <pic16c620a.h>
+
+#elif defined(__SDCC_PIC16C621)
+  #include <pic16c621.h>
+
+#elif defined(__SDCC_PIC16C621A)
+  #include <pic16c621a.h>
+
+#elif defined(__SDCC_PIC16C622)
+  #include <pic16c622.h>
+
+#elif defined(__SDCC_PIC16C622A)
+  #include <pic16c622a.h>
+
+#elif defined(__SDCC_PIC16C710)
+  #include <pic16c710.h>
+
+#elif defined(__SDCC_PIC16C711)
+  #include <pic16c711.h>
+
+#elif defined(__SDCC_PIC16C715)
+  #include <pic16c715.h>
+
+#elif defined(__SDCC_PIC16C717)
+  #include <pic16c717.h>
+
+#elif defined(__SDCC_PIC16C745)
+  #include <pic16c745.h>
+
+#elif defined(__SDCC_PIC16C765)
+  #include <pic16c765.h>
+
+#elif defined(__SDCC_PIC16C770)
+  #include <pic16c770.h>
+
+#elif defined(__SDCC_PIC16C771)
+  #include <pic16c771.h>
+
+#elif defined(__SDCC_PIC16C773)
+  #include <pic16c773.h>
+
+#elif defined(__SDCC_PIC16C774)
+  #include <pic16c774.h>
+
+#elif defined(__SDCC_PIC16C781)
+  #include <pic16c781.h>
+
+#elif defined(__SDCC_PIC16C782)
+  #include <pic16c782.h>
+
+#elif defined(__SDCC_PIC16C925)
+  #include <pic16c925.h>
+
+#elif defined(__SDCC_PIC16C926)
+  #include <pic16c926.h>
+
+#elif defined(__SDCC_PIC16F72)
+  #include <pic16f72.h>
+
+#elif defined(__SDCC_PIC16F73)
+  #include <pic16f73.h>
+
+#elif defined(__SDCC_PIC16F74)
+  #include <pic16f74.h>
+
+#elif defined(__SDCC_PIC16F76)
+  #include <pic16f76.h>
+
+#elif defined(__SDCC_PIC16F77)
+  #include <pic16f77.h>
+
+#elif defined(__SDCC_PIC16F84)
+  #include <pic16f84.h>
+
+#elif defined(__SDCC_PIC16F84A)
+  #include <pic16f84a.h>
+
+#elif defined(__SDCC_PIC16F87)
+  #include <pic16f87.h>
+
+#elif defined(__SDCC_PIC16F88)
+  #include <pic16f88.h>
+
+#elif defined(__SDCC_PIC16F610)
+  #include <pic16f610.h>
+
+#elif defined(__SDCC_PIC16F616)
+  #include <pic16f616.h>
+
+#elif defined(__SDCC_PIC16F627)
+  #include <pic16f627.h>
+
+#elif defined(__SDCC_PIC16F627A)
+  #include <pic16f627a.h>
+
+#elif defined(__SDCC_PIC16F628)
+  #include <pic16f628.h>
+
+#elif defined(__SDCC_PIC16F628A)
+  #include <pic16f628a.h>
+
+#elif defined(__SDCC_PIC16F630)
+  #include <pic16f630.h>
+
+#elif defined(__SDCC_PIC16F631)
+  #include <pic16f631.h>
+
+#elif defined(__SDCC_PIC16F636)
+  #include <pic16f636.h>
+
+#elif defined(__SDCC_PIC16F639)
+  #include <pic16f639.h>
+
+#elif defined(__SDCC_PIC16F648A)
+  #include <pic16f648a.h>
+
+#elif defined(__SDCC_PIC16F676)
+  #include <pic16f676.h>
+
+#elif defined(__SDCC_PIC16F677)
+  #include <pic16f677.h>
+
+#elif defined(__SDCC_PIC16F684)
+  #include <pic16f684.h>
+
+#elif defined(__SDCC_PIC16F685)
+  #include <pic16f685.h>
+
+#elif defined(__SDCC_PIC16F687)
+  #include <pic16f687.h>
+
+#elif defined(__SDCC_PIC16F688)
+  #include <pic16f688.h>
+
+#elif defined(__SDCC_PIC16F689)
+  #include <pic16f689.h>
+
+#elif defined(__SDCC_PIC16F690)
+  #include <pic16f690.h>
+
+#elif defined(__SDCC_PIC16F707)
+  #include <pic16f707.h>
+
+#elif defined(__SDCC_PIC16F716)
+  #include <pic16f716.h>
+
+#elif defined(__SDCC_PIC16F720)
+  #include <pic16f720.h>
+
+#elif defined(__SDCC_PIC16F721)
+  #include <pic16f721.h>
+
+#elif defined(__SDCC_PIC16F722)
+  #include <pic16f722.h>
+
+#elif defined(__SDCC_PIC16F722A)
+  #include <pic16f722a.h>
+
+#elif defined(__SDCC_PIC16F723)
+  #include <pic16f723.h>
+
+#elif defined(__SDCC_PIC16F723A)
+  #include <pic16f723a.h>
+
+#elif defined(__SDCC_PIC16F724)
+  #include <pic16f724.h>
+
+#elif defined(__SDCC_PIC16F726)
+  #include <pic16f726.h>
+
+#elif defined(__SDCC_PIC16F727)
+  #include <pic16f727.h>
+
+#elif defined(__SDCC_PIC16F737)
+  #include <pic16f737.h>
+
+#elif defined(__SDCC_PIC16F747)
+  #include <pic16f747.h>
+
+#elif defined(__SDCC_PIC16F767)
+  #include <pic16f767.h>
+
+#elif defined(__SDCC_PIC16F777)
+  #include <pic16f777.h>
+
+#elif defined(__SDCC_PIC16F785)
+  #include <pic16f785.h>
+
+#elif defined(__SDCC_PIC16F818)
+  #include <pic16f818.h>
+
+#elif defined(__SDCC_PIC16F819)
+  #include <pic16f819.h>
+
+#elif defined(__SDCC_PIC16F870)
+  #include <pic16f870.h>
+
+#elif defined(__SDCC_PIC16F871)
+  #include <pic16f871.h>
+
+#elif defined(__SDCC_PIC16F872)
+  #include <pic16f872.h>
+
+#elif defined(__SDCC_PIC16F873)
+  #include <pic16f873.h>
+
+#elif defined(__SDCC_PIC16F873A)
+  #include <pic16f873a.h>
+
+#elif defined(__SDCC_PIC16F874)
+  #include <pic16f874.h>
+
+#elif defined(__SDCC_PIC16F874A)
+  #include <pic16f874a.h>
+
+#elif defined(__SDCC_PIC16F876)
+  #include <pic16f876.h>
+
+#elif defined(__SDCC_PIC16F876A)
+  #include <pic16f876a.h>
+
+#elif defined(__SDCC_PIC16F877)
+  #include <pic16f877.h>
+
+#elif defined(__SDCC_PIC16F877A)
+  #include <pic16f877a.h>
+
+#elif defined(__SDCC_PIC16F882)
+  #include <pic16f882.h>
+
+#elif defined(__SDCC_PIC16F883)
+  #include <pic16f883.h>
+
+#elif defined(__SDCC_PIC16F884)
+  #include <pic16f884.h>
+
+#elif defined(__SDCC_PIC16F886)
+  #include <pic16f886.h>
+
+#elif defined(__SDCC_PIC16F887)
+  #include <pic16f887.h>
+
+#elif defined(__SDCC_PIC16F913)
+  #include <pic16f913.h>
+
+#elif defined(__SDCC_PIC16F914)
+  #include <pic16f914.h>
+
+#elif defined(__SDCC_PIC16F916)
+  #include <pic16f916.h>
+
+#elif defined(__SDCC_PIC16F917)
+  #include <pic16f917.h>
+
+#elif defined(__SDCC_PIC16F946)
+  #include <pic16f946.h>
+
+#elif defined(__SDCC_PIC16HV616)
+  #include <pic16hv616.h>
+
+#elif defined(__SDCC_PIC12F1501)
+  #include <pic12f1501.h>
+
+#elif defined(__SDCC_PIC12F1822)
+  #include <pic12f1822.h>
+
+#elif defined(__SDCC_PIC12F1840)
+  #include <pic12f1840.h>
+
+#elif defined(__SDCC_PIC12LF1552)
+  #include <pic12lf1552.h>
+
+#elif defined(__SDCC_PIC16F1454)
+  #include <pic16f1454.h>
+
+#elif defined(__SDCC_PIC16F1455)
+  #include <pic16f1455.h>
+
+#elif defined(__SDCC_PIC16F1458)
+  #include <pic16f1458.h>
+
+#elif defined(__SDCC_PIC16F1459)
+  #include <pic16f1459.h>
+
+#elif defined(__SDCC_PIC16F1503)
+  #include <pic16f1503.h>
+
+#elif defined(__SDCC_PIC16F1507)
+  #include <pic16f1507.h>
+
+#elif defined(__SDCC_PIC16F1508)
+  #include <pic16f1508.h>
+
+#elif defined(__SDCC_PIC16F1509)
+  #include <pic16f1509.h>
+
+#elif defined(__SDCC_PIC16F1512)
+  #include <pic16f1512.h>
+
+#elif defined(__SDCC_PIC16F1513)
+  #include <pic16f1513.h>
+
+#elif defined(__SDCC_PIC16F1516)
+  #include <pic16f1516.h>
+
+#elif defined(__SDCC_PIC16F1517)
+  #include <pic16f1517.h>
+
+#elif defined(__SDCC_PIC16F1518)
+  #include <pic16f1518.h>
+
+#elif defined(__SDCC_PIC16F1519)
+  #include <pic16f1519.h>
+
+#elif defined(__SDCC_PIC16F1526)
+  #include <pic16f1526.h>
+
+#elif defined(__SDCC_PIC16F1527)
+  #include <pic16f1527.h>
+
+#elif defined(__SDCC_PIC16F1782)
+  #include <pic16f1782.h>
+
+#elif defined(__SDCC_PIC16F1783)
+  #include <pic16f1783.h>
+
+#elif defined(__SDCC_PIC16F1784)
+  #include <pic16f1784.h>
+
+#elif defined(__SDCC_PIC16F1786)
+  #include <pic16f1786.h>
+
+#elif defined(__SDCC_PIC16F1787)
+  #include <pic16f1787.h>
+
+#elif defined(__SDCC_PIC16F1788)
+  #include <pic16f1788.h>
+
+#elif defined(__SDCC_PIC16F1789)
+  #include <pic16f1789.h>
+
+#elif defined(__SDCC_PIC16F1823)
+  #include <pic16f1823.h>
+
+#elif defined(__SDCC_PIC16F1824)
+  #include <pic16f1824.h>
+
+#elif defined(__SDCC_PIC16F1825)
+  #include <pic16f1825.h>
+
+#elif defined(__SDCC_PIC16F1826)
+  #include <pic16f1826.h>
+
+#elif defined(__SDCC_PIC16F1827)
+  #include <pic16f1827.h>
+
+#elif defined(__SDCC_PIC16F1828)
+  #include <pic16f1828.h>
+
+#elif defined(__SDCC_PIC16F1829)
+  #include <pic16f1829.h>
+
+#elif defined(__SDCC_PIC16F1847)
+  #include <pic16f1847.h>
+
+#elif defined(__SDCC_PIC16F1933)
+  #include <pic16f1933.h>
+
+#elif defined(__SDCC_PIC16F1934)
+  #include <pic16f1934.h>
+
+#elif defined(__SDCC_PIC16F1936)
+  #include <pic16f1936.h>
+
+#elif defined(__SDCC_PIC16F1937)
+  #include <pic16f1937.h>
+
+#elif defined(__SDCC_PIC16F1938)
+  #include <pic16f1938.h>
+
+#elif defined(__SDCC_PIC16F1939)
+  #include <pic16f1939.h>
+
+#elif defined(__SDCC_PIC16F1946)
+  #include <pic16f1946.h>
+
+#elif defined(__SDCC_PIC16F1947)
+  #include <pic16f1947.h>
+
+#elif defined(__SDCC_PIC16LF1902)
+  #include <pic16lf1902.h>
+
+#elif defined(__SDCC_PIC16LF1903)
+  #include <pic16lf1903.h>
+
+#elif defined(__SDCC_PIC16LF1904)
+  #include <pic16lf1904.h>
+
+#elif defined(__SDCC_PIC16LF1906)
+  #include <pic16lf1906.h>
+
+#elif defined(__SDCC_PIC16LF1907)
+  #include <pic16lf1907.h>
+
+#else
+  #error The sdcc is not supported by this processor!
+#endif
+
+#ifndef __CONCAT2
+  #define __CONCAT2(a, b)       a##b
+#endif
+
+#ifndef __CONCAT
+  #define __CONCAT(a, b)        __CONCAT2(a, b)
+#endif
+
+#define __CONFIG(address, value) \
+    static const __code unsigned char __at(address) __CONCAT(_conf, __LINE__) = (value)
+
+#define Nop()                   __asm nop __endasm
+#define ClrWdt()                __asm clrwdt __endasm
+#define Sleep()                 __asm sleep __endasm
+#define Reset()                 __asm reset __endasm
+
+    // To pointer manipulations. (From the sdcc/src/pic14/pcode.h file.)
+#define GPTR_TAG_MASK           0x80    // Generated by the device-manager.pl program.
+#define GPTR_TAG_DATA           0x00
+#define GPTR_TAG_CODE           0x80
+
+#endif // #ifndef __PIC16REGS_H__
